Adding load-dxfuse script

--- a/03-load_from_fieldid.ipynb
+++ b/03-load_from_fieldid.ipynb
@@ -1,15 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03612759-35f5-4519-b777-ef7916f88236",
    "metadata": {},
    "source": [
     "# UKB RAP: From BGEN File to Hail MatrixTable\n",
     "\n",
-    "This notebook shows how to load the BGEN files from UKB RAP using the latest version of Hail.\n",
+    "This notebook shows how to load the BGEN files from UKB RAP using the latest version of Hail. Note that the current JupyterLab instance is one version behind. We used this community-developed app from the Lindren Lab to run this: https://github.com/lindgrengroup/hail-on-dnanexus\n",
     "\n",
-    "First, we initialize Hail."
+    "First, we initialize Hail. Note that the BGEN files are lz4 compressed, so we have to specify that in our Spark Context."
    ]
   },
   {
@@ -94,15 +95,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e0009fb-224c-4bc6-881f-0769ae9d66b8",
    "metadata": {},
    "source": [
-    "Next, we'll find the files associated with field id 23159. This is the Whole Exome Sequencing files in the BGEN format.\n",
+    "Next, we'll find the files associated with field id 23159. This field corresponds to the Whole Exome Sequencing files in the BGEN format.\n",
     "\n",
     "We first find the file ids using `dxpy.find_data_objects()`. \n",
     "\n",
-    "Then we can do a `dx describe` on each of these to get the relevant file information: file_ids."
+    "Then we can do a `dx describe` on each of the file ids to get the relevant file information for each file, namely the file name and the folder path."
    ]
   },
   {
@@ -118,6 +120,7 @@
     "#import hail as hl\n",
     "import pandas as pd\n",
     "testing = True\n",
+    "project_dir = \"/user/tladeras/\"\n",
     "\n",
     "field_id = \"23159\"\n",
     "\n",
@@ -127,6 +130,15 @@
     "\n",
     "# Grab describe objects for every file id\n",
     "out_describe = [dxpy.bindings.dxdataobject_functions.describe(id) for id in id_list]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f2d716b9",
+   "metadata": {},
+   "source": [
+    "Then we'll build a list of file paths using dxFUSE paths. Then we'll process and build the hdfs file paths for indexing, the file name, and the sample file locations. We only will use one of the sample file locations, since all of them are identical."
    ]
   },
   {
@@ -144,11 +156,40 @@
     "#grab file name\n",
     "index_list = [f\"\" + desc[\"name\"] for desc in out_describe]\n",
     "#make list of hdfs locations for index\n",
-    "hdfs_list = [f\"hdfs:///index/\" + desc[\"name\"] + \".idx2\" for desc in out_describe]\n",
+    "hdfs_list = [f\"file:///mnt2/project\" + project_dir + \"index/\" + desc[\"name\"] + \".idx2\" for desc in out_describe]\n",
     "#make list of bgen locations in project storage\n",
     "bgen_list = [dx + \".bgen\" for dx in dxfuse_list]\n",
     "#make list of sample locations in project storage\n",
     "sample_list = [f\"\" + dx + \".sample\" for dx in dxfuse_list]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ccf45f3d",
+   "metadata": {},
+   "source": [
+    "In order to transfer files, we'll have to reset some of the environment variables. We'll also mount the project as `/mnt2/project/` with dxFUSE's `-limitedWrite` option. We'll do this by using this script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac4580f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash load-dxfuse.sh"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dac95d0f",
+   "metadata": {},
+   "source": [
+    "Now we glue them together into a Pandas DataFrame, which we'll use to process all of the files. Note that if `testing == True`, then the notebook only processes the first 4 lines of the file manifest."
    ]
   },
   {
@@ -168,11 +209,20 @@
     "\n",
     "manifest = manifest.tail(-1)    \n",
     "    \n",
-    "#file_out = \"bgen_manifest.csv\"\n",
-    "#manifest.to_csv(file_out)\n",
+    "file_out = \"bgen_manifest.csv\"\n",
+    "manifest.to_csv(file_out)\n",
     "\n",
     "#save file manifest to project sstorage\n",
-    "#dxpy.upload_local_file(filename=file_out)"
+    "dxpy.upload_local_file(filename=file_out, folder = \"/user/tladeras/index/\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2d788a64",
+   "metadata": {},
+   "source": [
+    "Here's what the file manifest looks like."
    ]
   },
   {
@@ -273,11 +323,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "81a80183-c22d-4cef-b4f8-17800f539eb8",
    "metadata": {},
    "source": [
-    "Now we index each of the files by cycling over each BGEN file. This is currently saved in HDFS. We suggest storing the file manifest and the index files in a probject.\n",
+    "Now we index each of the files by cycling over each BGEN file. This is currently saved in HDFS. We suggest storing the file manifest and the index files in a project so the BGEN files can be loaded in easily on subsequent runs.\n",
     "\n",
     "Note the BGEN files are in genome build `GRCh37`. If you want to use them in build 38, the BGEN files will need to be lifted over to the new genome build."
    ]
@@ -308,6 +359,15 @@
     "                  reference_genome=\"GRCh37\",\n",
     "                  contig_recoding=None,\n",
     "                  skip_invalid_loci=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "245fbe27",
+   "metadata": {},
+   "source": [
+    "We can see the index files and their locations using `hdfs ds -ls`, which will list all of the files in `/index/`."
    ]
   },
   {
@@ -345,6 +405,29 @@
     "%%bash\n",
     "\n",
     "hdfs dfs -ls /index/"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2cacfc0b",
+   "metadata": {},
+   "source": [
+    "We should save these indexes into project storage."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f3ac93ff",
+   "metadata": {},
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# download indexes to driver node\n",
+    "hdfs dfs get /index/ .\n",
+    "# upload the indexes to project storage\n",
+    "dx upload -r index/*.idx2 --destination /user/tladeras/index/"
    ]
   },
   {
